[gd_scene load_steps=5 format=3 uid="uid://ber3a1nsap57q"]

[ext_resource type="Script" path="res://lever.gd" id="1_gk2tc"]
[ext_resource type="Texture2D" uid="uid://bvps6e6u47rcq" path="res://assets/Assets/Спрайт-0002.png" id="2_6o1xo"]
[ext_resource type="Texture2D" uid="uid://b6rw8wf34nmlw" path="res://assets/Assets/Спрайт-0003.png" id="3_nv14p"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y8cm3"]
size = Vector2(64, 56)

[node name="Lever" type="Area2D"]
script = ExtResource("1_gk2tc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -12)
shape = SubResource("RectangleShape2D_y8cm3")

[node name="hatch_close" type="Sprite2D" parent="."]
texture = ExtResource("2_6o1xo")

[node name="hatch_open" type="Sprite2D" parent="."]
texture = ExtResource("3_nv14p")

[connection signal="body_entered" from="." to="." method="_on_player_enter"]
[connection signal="body_exited" from="." to="." method="_on_player_exit"]
